Changes to build when using Flatpak

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	# Gone Too Soon
 	target_compile_options(OpenGL PRIVATE -Wno-deprecated-declarations)
 endif()
+
+if (USING_FLATPAK)
+    target_compile_definitions(OpenGL PUBLIC USING_FLATPAK)
+endif()
